docs/logbook: clarify #19 capture blocker as launcher foreground issue

--- a/docs/logbook/2026-02-09.md
+++ b/docs/logbook/2026-02-09.md
@@ -11,11 +11,12 @@
 Tried running a fresh checkpoint capture session after merge #26.
 
 Observed blocker:
-- UI dumps show `com.android.systemui` keyguard/lockscreen as top window
-- `vmictl` navigation commands that require app selectors can stall while waiting for elements when device is locked
+- `vmictl` navigation commands (`measurements-full`) hang waiting for UI selectors
+- Preflight shows top resumed activity is launcher (`com.android.launcher3/...`) rather than VMI+
+- `vmictl launch` returns successfully but device remains on launcher UI in subsequent dumps
 
 Action taken:
-- Added `scripts/capture/preflight_capture.py` to check connectivity + keyguard state before running long capture flows
+- Added `scripts/capture/preflight_capture.py` to check connectivity, keyguard state, and top resumed activity before running long capture flows
 - Added issue #19 runbook in `docs/reverse-engineering/playbook.md` with explicit per-step checkpoints and extraction commands
 
 ## #6 night ventilation decoding
